--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <meta charset="UTF-8">
-  <title>Braden Shipley</title>
+  <title>Reed Shipley</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="https://unpkg.com/chota@latest">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
@@ -32,7 +32,7 @@
         <a class="button primary" style="color: #0f111a;" href="mailto:bradenrshipley@gmail.com">Contact</a>
       </div>
     </nav>
-        <h1 class="text-primary is-center">My name is Braden and I write software for a living</h1>
+        <h1 class="text-primary is-center">My name is Reed and I write software for a living</h1>
     <div class="container">
       <div class="row">
         <img class="col-6" src="./assets/golfing.jpg" alt="a picture of me golfing!"/>
@@ -41,10 +41,10 @@
             <header class="text-primary is-center">
               <h3>About Me</h3>
             </header>
-            <p>I am a software engineer based out of texas. I build scalable software solutions to solve a wide variety of problems, both in private enterprise and for the federal government. I am available for freelance work and am proficient in a variety of languages and frameworks. (This portfolio is a work-in-progress)
+            <p>I am a software engineer based out of Colorado. I build scalable software solutions to solve a wide variety of problems, both in private enterprise and for the federal government. I am available for freelance work and am proficient in a variety of languages and frameworks. (This portfolio is a work-in-progress)
             </p>
             <footer class="is-right">
-              <a href="https://www.github.com/bradenshipley">
+              <a href="https://www.github.com/reedship">
                 Github
               </a>
               <div class="text-primary">&nbsp;|&nbsp;</div>
