--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 Github
               </a>
               <div class="text-primary">&nbsp;|&nbsp;</div>
-              <a href="./assets/bradenShipleyResume.docx" download>
+              <a href="./assets/reedshipley.docx" download>
                 Download Resume
               </a>
             </footer>
