rooting out all the bradens
Signed-off-by: reed <bradenrshipley@gmail.com>

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <body>
     <nav class="nav" style="margin-bottom:5px;">
       <div class="nav-left">
-        <div class="brand text-primary">Braden Shipley</div>
+        <div class="brand text-primary">Reed Shipley</div>
       </div>
       <div class="nav-right">
         <a class="button primary" style="color: #0f111a;" href="https://medium.com/@bradenshipley">Articles</a>
-        <a class="button primary" style="color: #0f111a;" href="mailto:bradenrshipley@gmail.com">Contact</a>
+        <a class="button primary" style="color: #0f111a;" href="mailto:reedbshipley@gmail.com">Contact</a>
       </div>
     </nav>
         <h1 class="text-primary is-center">My name is Reed and I write software for a living</h1>
@@ -94,7 +94,7 @@
           <footer class="is-right">
             <a href="https://rubygems.org/gems/simpleokta">RubyGems Source </a>
             <div class="text-primary">&nbsp;|&nbsp;</div>
-            <a href="https://github.com/bradenshipley/simpleokta">Github Repo</a>
+            <a href="https://github.com/reedship/simpleokta">Github Repo</a>
           </footer>
         </div>
         <div class="col-6 card">
@@ -105,7 +105,7 @@
           <footer class="is-right">
             <a href="https://www.youtube.com/embed/N95z3fSR3jY">Video Walkthrough</a>
             <div class="text-primary">&nbsp;|&nbsp;</div>
-            <a href="https://github.com/bradenshipley/ppp5">Github Repo</a>
+            <a href="https://github.com/reedship/ppp5">Github Repo</a>
           </footer>
         </div>
       </div>
@@ -118,7 +118,7 @@
           <footer class="is-right">
             <a href="https://www.youtube.com/embed/Mm0UnK66378">Video Walkthrough</a>
             <div class="text-primary">&nbsp;|&nbsp;</div>
-            <a href="https://github.com/bradenshipley/mtdb">Github Repo</a>
+            <a href="https://github.com/reedship/mtdb">Github Repo</a>
           </footer>
         </div>
         <div class="card col-6">
