--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="content">
       <div class="about-me">
         <div class="about-me-content">
-          <p>I am a software engineer based out of Colorado. I build scalable software solutions to solve a wide variety of problems, both in provate enterprise and for the federal government. I am available or freelance work and am proficient in a variety of languages and frameworks. (This portfolio is a work in progress)</p>
+          <p>I am a software engineer based out of Texas. I build scalable software solutions to solve a wide variety of problems, both in provate enterprise and for the federal government. I am available or freelance work and am proficient in a variety of languages and frameworks. (This portfolio is a work in progress)</p>
           <a href="./assets/reedshipley.docx" download>
             <img
               class="about-me-content-button"
