add todos project
Signed-off-by: Reed Shipley <reedbshipley@gmail.com>

--- a/index.html
+++ b/index.html
@@ -142,6 +142,16 @@
           <div class="projects-title">PROJECTS</div>
           <div class="projects-cards">
 
+	   <div class="project-card">
+              <p>
+                Todos // An NPM package for managing and reporting 'TODO' comments in software projects
+              </p>
+              <div class="project-card-links-container">
+                <a class="project-card-link-b" href="https://github.com/reedship/todos_node">
+                  <p>Github Repo</p>
+                </a>
+              </div>
+            </div>
             <div class="project-card">
               <p>
                 SimpleOkta // An open-source HTTP gem for common Okta API calls
