add npm registry url for todos

--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
                 Todos // An NPM package for managing and reporting 'TODO' comments in software projects
               </p>
               <div class="project-card-links-container">
+
+		<a class="project-card-link-a" href="https://www.npmjs.com/package/@shipleylabs/todos">
+                  <p>NPM Package</p>
+                </a>
                 <a class="project-card-link-b" href="https://github.com/reedship/todos_node">
                   <p>Github Repo</p>
                 </a>
