--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Space%20Mono|Inter">
   <!-- <link rel="stylesheet" href="https://unpkg.com/chota@latest"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <link rel="stylesheet" href="./index.css">
-  <!-- <link rel="script" href="./script.js"> -->
   <script src="./script.js"></script>
   <body>
-
     <nav class="nav">
       <div class="nav-left">
         <img
@@ -20,7 +18,7 @@
         />
       </div>
       <div class="nav-right">
-        Contact // reedbshipley@gmail.com
+        Contact // <a href="mailto:reedbshipley@gmail.com" style="text-decoration:none">reedbshipley@gmail.com</a>
       </div>
     </nav>
 
@@ -138,7 +136,7 @@
       </div>
 
       <div class="projects">
-        <div class="projets-container">
+        <div class="projects-container">
           <div class="projects-title">PROJECTS</div>
           <div class="projects-cards">
 
